@@ -1,6 +1,9 @@
 v0.0.3 (xxx)
 - added support for repeating elements (like page numbers) via add_repeating_element
 - Ensured consistent behaviour WRT functions moving the internal cursor 
+  - functions that require positioning info (cell, shapes, etc) will not move the cursor at all
+  - functions where positioning info in optional (text, image, etc), the cursor will be moved to the bottom left
+    corner of the object
 - expanded spec coverage
 
 v0.0.2 (11th January 2008)
